gitops/clusters/prod/apps/public/personal-web-page/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: public
spec:
  redirectScheme:
    scheme: https
    permanent: true
