gitops/clusters/prod/apps/public/personal-web-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-web-page
  namespace: public
spec:
  selector:
    app: personal-web-page
  ports:
    - port: 80
      targetPort: 80
