gitops/clusters/prod/apps/public/personal-web-page/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: personal-web-page
  namespace: public
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pavel-usanli.online`)
      kind: Rule
      services:
        - name: personal-web-page
          port: 80
  tls:
    secretName: personal-web-page-tls
